--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~47.0.12",
     "expo-camera": "~13.1.0",
     "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
     "expo-location": "~15.0.1",
     "expo-media-library": "~15.0.0",
     "expo-splash-screen": "~0.17.5",
@@ -32,6 +33,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
